# pico-usb-speed-check

./: CMakeLists.txt  speedcheck.py  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_speed_check.c
